--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/underscore": "^1.8.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "jquery": "^3.0.0",
+    "popper.js": "^1.11.0",
     "rxjs": "^5.4.2",
-    "underscore": "^1.8.3",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
