--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jwt-decode": "^2.2.0",
+    "ng4-http": "^1.1.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
