--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angular2-modal": "^3.0.3",
     "angular2-datatable": "^0.6.0",
     "angular2-jwt": "^0.2.3",
+    "angular2-modal": "^3.0.3",
     "atob": "^2.0.3",
     "auth0-js": "^8.10.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "docxtemplater": "^3.1.9",
     "font-awesome": "^4.7.0",
+    "jszip": "^2.6.1",
     "jwt-decode": "^2.2.0",
     "ng2-inline-editor": "^0.1.1-alpha.20",
-    "ng4-http": "^1.1.0",
     "ngx-contextmenu": "^1.3.5",
+    "pdfjs-dist": "^1.9.640",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
