--- a/package.json
+++ b/package.json
@@ -21,15 +21,16 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "angular2-modal": "^3.0.3",
     "angular2-datatable": "^0.6.0",
     "angular2-jwt": "^0.2.3",
+    "angular2-modal": "^3.0.3",
     "atob": "^2.0.3",
     "auth0-js": "^8.10.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jwt-decode": "^2.2.0",
+    "ng2-completer": "^1.6.3",
     "ng2-inline-editor": "^0.1.1-alpha.20",
     "ng4-http": "^1.1.0",
     "ngx-contextmenu": "^1.3.5",
