--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-datatable": "^0.6.0",
     "angular2-jwt": "^0.2.3",
     "angular2-modal": "^3.0.3",
+    "angular4-color-picker": "^1.4.2",
     "atob": "^2.0.3",
     "auth0-js": "^8.10.0",
     "bootstrap": "^3.3.7",
