--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,7 @@ Thumbs.db
 
 #vscode
 .vscode
+API/__pycache__/api.cpython-36.pyc
+API/__pycache__/authentication.cpython-36.pyc
+API/__pycache__/settings.cpython-36.pyc
+.gitignore
