--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ng2-inline-editor": "^0.1.1-alpha.20",
     "ng4-loading-spinner": "^1.1.1",
     "ngx-contextmenu": "^1.3.5",
+    "ngx-permissions": "^3.2.1",
     "pdfjs-dist": "^1.9.640",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
