--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jszip": "^2.6.1",
         "jwt-decode": "^2.2.0",
         "ng2-completer": "^1.6.3",
+        "ng2-component-spinner": "^0.2.1",
         "ng4-loading-spinner": "^1.1.1",
         "ngx-contextmenu": "^1.3.5",
         "ngx-permissions": "^3.2.1",
