--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "angular2-modal": "^3.0.3",
     "angular2-notifications": "^0.9.1",
     "angular4-color-picker": "^1.4.2",
-    "angular4-fusioncharts": "^1.0.0",
     "atob": "^2.0.3",
     "auth0-js": "^8.12.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
     "docxtemplater": "^3.1.9",
     "font-awesome": "^4.7.0",
-    "fusioncharts": "^3.12.2",
     "jszip": "^2.6.1",
     "jwt-decode": "^2.2.0",
+    "ng2-charts": "^1.6.0",
     "ng2-completer": "^1.6.3",
     "ng2-inline-editor": "^0.1.1-alpha.20",
     "ngx-contextmenu": "^1.3.5",
