--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "jszip": "^2.6.1",
     "jwt-decode": "^2.2.0",
     "ng2-completer": "^1.6.3",
+    "ng2-component-spinner": "^0.2.1",
     "ng2-inline-editor": "^0.1.1-alpha.20",
     "ngx-contextmenu": "^1.3.5",
+    "ngx-permissions": "^3.2.2",
     "pdfjs-dist": "^1.9.640",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
