--- a/.gitignore
+++ b/.gitignore
@@ -45,10 +45,10 @@ Thumbs.db
 .editorconfig
 
 #db
-#/API/data/db/*
+/API/data/db/*
 
 #cache gevent
-#/API/__pycache__
+/API/__pycache__
 
 #vscode
 .vscode
